--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 default-run = "advent-of-code-2024"
 
 [dependencies]
+aoc-client = "0.2.0"
 chrono = "0.4.38"
+clap = { version = "4.5.23", features = ["derive"] }
 itertools = "0.13.0"
 regex = "1.11.1"
