--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ default-run = "advent-of-code-2024"
 
 [dependencies]
 aoc-client = "0.2.0"
+bmp = "0.5.0"
 chrono = "0.4.38"
 clap = { version = "4.5.23", features = ["derive"] }
 itertools = "0.13.0"
